@@ -22,14 +22,6 @@ struct rxvt_compose_entry {
  { 0x00020, 0x00333, 0x02017 },
  { 0x00020, 0x00342, 0x01fc0 },
  { 0x00020, 0x00345, 0x0037a },
- { 0x00020, 0x0064b, 0x0fe70 },
- { 0x00020, 0x0064c, 0x0fe72 },
- { 0x00020, 0x0064d, 0x0fe74 },
- { 0x00020, 0x0064e, 0x0fe76 },
- { 0x00020, 0x0064f, 0x0fe78 },
- { 0x00020, 0x00650, 0x0fe7a },
- { 0x00020, 0x00651, 0x0fe7c },
- { 0x00020, 0x00652, 0x0fe7e },
  { 0x00020, 0x03099, 0x0309b },
  { 0x00020, 0x0309a, 0x0309c },
  { 0x00021, 0x00021, 0x0203c },
@@ -789,183 +781,12 @@ struct rxvt_compose_entry {
  { 0x005e9, 0x005c2, 0x0fb2b },
  { 0x005ea, 0x005bc, 0x0fb4a },
  { 0x005f2, 0x005b7, 0x0fb1f },
- { 0x00626, 0x00627, 0x0fbea },
- { 0x00626, 0x0062c, 0x0fc00 },
- { 0x00626, 0x0062d, 0x0fc01 },
- { 0x00626, 0x0062e, 0x0fc99 },
- { 0x00626, 0x00631, 0x0fc64 },
- { 0x00626, 0x00632, 0x0fc65 },
- { 0x00626, 0x00645, 0x0fc02 },
- { 0x00626, 0x00646, 0x0fc67 },
- { 0x00626, 0x00647, 0x0fc9b },
- { 0x00626, 0x00648, 0x0fbee },
- { 0x00626, 0x00649, 0x0fbf9 },
- { 0x00626, 0x0064a, 0x0fc04 },
- { 0x00626, 0x006c6, 0x0fbf2 },
- { 0x00626, 0x006c7, 0x0fbf0 },
- { 0x00626, 0x006c8, 0x0fbf4 },
- { 0x00626, 0x006d0, 0x0fbf6 },
- { 0x00626, 0x006d5, 0x0fbec },
- { 0x00627, 0x0064b, 0x0fd3c },
  { 0x00627, 0x00653, 0x00622 },
  { 0x00627, 0x00654, 0x00623 },
  { 0x00627, 0x00655, 0x00625 },
  { 0x00627, 0x00674, 0x00675 },
- { 0x00628, 0x0062c, 0x0fc05 },
- { 0x00628, 0x0062d, 0x0fc06 },
- { 0x00628, 0x0062e, 0x0fc07 },
- { 0x00628, 0x00631, 0x0fc6a },
- { 0x00628, 0x00632, 0x0fc6b },
- { 0x00628, 0x00645, 0x0fc08 },
- { 0x00628, 0x00646, 0x0fc6d },
- { 0x00628, 0x00647, 0x0fca0 },
- { 0x00628, 0x00649, 0x0fc09 },
- { 0x00628, 0x0064a, 0x0fc0a },
- { 0x0062a, 0x0062c, 0x0fc0b },
- { 0x0062a, 0x0062d, 0x0fc0c },
- { 0x0062a, 0x0062e, 0x0fc0d },
- { 0x0062a, 0x00631, 0x0fc70 },
- { 0x0062a, 0x00632, 0x0fc71 },
- { 0x0062a, 0x00645, 0x0fc0e },
- { 0x0062a, 0x00646, 0x0fc73 },
- { 0x0062a, 0x00647, 0x0fca5 },
- { 0x0062a, 0x00649, 0x0fc0f },
- { 0x0062a, 0x0064a, 0x0fc10 },
- { 0x0062b, 0x0062c, 0x0fc11 },
- { 0x0062b, 0x00631, 0x0fc76 },
- { 0x0062b, 0x00632, 0x0fc77 },
- { 0x0062b, 0x00645, 0x0fc12 },
- { 0x0062b, 0x00646, 0x0fc79 },
- { 0x0062b, 0x00647, 0x0fce6 },
- { 0x0062b, 0x00649, 0x0fc13 },
- { 0x0062b, 0x0064a, 0x0fc14 },
- { 0x0062c, 0x0062d, 0x0fc15 },
- { 0x0062c, 0x00645, 0x0fc16 },
- { 0x0062c, 0x00649, 0x0fd01 },
- { 0x0062c, 0x0064a, 0x0fd02 },
- { 0x0062d, 0x0062c, 0x0fc17 },
- { 0x0062d, 0x00645, 0x0fc18 },
- { 0x0062d, 0x00649, 0x0fcff },
- { 0x0062d, 0x0064a, 0x0fd00 },
- { 0x0062e, 0x0062c, 0x0fc19 },
- { 0x0062e, 0x0062d, 0x0fc1a },
- { 0x0062e, 0x00645, 0x0fc1b },
- { 0x0062e, 0x00649, 0x0fd03 },
- { 0x0062e, 0x0064a, 0x0fd04 },
- { 0x00630, 0x00670, 0x0fc5b },
- { 0x00631, 0x00670, 0x0fc5c },
- { 0x00633, 0x0062c, 0x0fc1c },
- { 0x00633, 0x0062d, 0x0fc1d },
- { 0x00633, 0x0062e, 0x0fc1e },
- { 0x00633, 0x00631, 0x0fd0e },
- { 0x00633, 0x00645, 0x0fc1f },
- { 0x00633, 0x00647, 0x0fce8 },
- { 0x00633, 0x00649, 0x0fcfb },
- { 0x00633, 0x0064a, 0x0fcfc },
- { 0x00634, 0x0062c, 0x0fd09 },
- { 0x00634, 0x0062d, 0x0fd0a },
- { 0x00634, 0x0062e, 0x0fd0b },
- { 0x00634, 0x00631, 0x0fd0d },
- { 0x00634, 0x00645, 0x0fce9 },
- { 0x00634, 0x00647, 0x0fcea },
- { 0x00634, 0x00649, 0x0fcfd },
- { 0x00634, 0x0064a, 0x0fcfe },
- { 0x00635, 0x0062d, 0x0fc20 },
- { 0x00635, 0x0062e, 0x0fcb2 },
- { 0x00635, 0x00631, 0x0fd0f },
- { 0x00635, 0x00645, 0x0fc21 },
- { 0x00635, 0x00649, 0x0fd05 },
- { 0x00635, 0x0064a, 0x0fd06 },
- { 0x00636, 0x0062c, 0x0fc22 },
- { 0x00636, 0x0062d, 0x0fc23 },
- { 0x00636, 0x0062e, 0x0fc24 },
- { 0x00636, 0x00631, 0x0fd10 },
- { 0x00636, 0x00645, 0x0fc25 },
- { 0x00636, 0x00649, 0x0fd07 },
- { 0x00636, 0x0064a, 0x0fd08 },
- { 0x00637, 0x0062d, 0x0fc26 },
- { 0x00637, 0x00645, 0x0fc27 },
- { 0x00637, 0x00649, 0x0fcf5 },
- { 0x00637, 0x0064a, 0x0fcf6 },
- { 0x00638, 0x00645, 0x0fc28 },
- { 0x00639, 0x0062c, 0x0fc29 },
- { 0x00639, 0x00645, 0x0fc2a },
- { 0x00639, 0x00649, 0x0fcf7 },
- { 0x00639, 0x0064a, 0x0fcf8 },
- { 0x0063a, 0x0062c, 0x0fc2b },
- { 0x0063a, 0x00645, 0x0fc2c },
- { 0x0063a, 0x00649, 0x0fcf9 },
- { 0x0063a, 0x0064a, 0x0fcfa },
- { 0x00640, 0x0064b, 0x0fe71 },
- { 0x00640, 0x0064e, 0x0fe77 },
- { 0x00640, 0x0064f, 0x0fe79 },
- { 0x00640, 0x00650, 0x0fe7b },
- { 0x00640, 0x00651, 0x0fe7d },
- { 0x00640, 0x00652, 0x0fe7f },
- { 0x00641, 0x0062c, 0x0fc2d },
- { 0x00641, 0x0062d, 0x0fc2e },
- { 0x00641, 0x0062e, 0x0fc2f },
- { 0x00641, 0x00645, 0x0fc30 },
- { 0x00641, 0x00649, 0x0fc31 },
- { 0x00641, 0x0064a, 0x0fc32 },
- { 0x00642, 0x0062d, 0x0fc33 },
- { 0x00642, 0x00645, 0x0fc34 },
- { 0x00642, 0x00649, 0x0fc35 },
- { 0x00642, 0x0064a, 0x0fc36 },
- { 0x00643, 0x00627, 0x0fc37 },
- { 0x00643, 0x0062c, 0x0fc38 },
- { 0x00643, 0x0062d, 0x0fc39 },
- { 0x00643, 0x0062e, 0x0fc3a },
- { 0x00643, 0x00644, 0x0fc3b },
- { 0x00643, 0x00645, 0x0fc3c },
- { 0x00643, 0x00649, 0x0fc3d },
- { 0x00643, 0x0064a, 0x0fc3e },
- { 0x00644, 0x00622, 0x0fef5 },
- { 0x00644, 0x00623, 0x0fef7 },
- { 0x00644, 0x00625, 0x0fef9 },
- { 0x00644, 0x00627, 0x0fefb },
- { 0x00644, 0x0062c, 0x0fc3f },
- { 0x00644, 0x0062d, 0x0fc40 },
- { 0x00644, 0x0062e, 0x0fc41 },
- { 0x00644, 0x00645, 0x0fc42 },
- { 0x00644, 0x00647, 0x0fccd },
- { 0x00644, 0x00649, 0x0fc43 },
- { 0x00644, 0x0064a, 0x0fc44 },
- { 0x00645, 0x00627, 0x0fc88 },
- { 0x00645, 0x0062c, 0x0fc45 },
- { 0x00645, 0x0062d, 0x0fc46 },
- { 0x00645, 0x0062e, 0x0fc47 },
- { 0x00645, 0x00645, 0x0fc48 },
- { 0x00645, 0x00649, 0x0fc49 },
- { 0x00645, 0x0064a, 0x0fc4a },
- { 0x00646, 0x0062c, 0x0fc4b },
- { 0x00646, 0x0062d, 0x0fc4c },
- { 0x00646, 0x0062e, 0x0fc4d },
- { 0x00646, 0x00631, 0x0fc8a },
- { 0x00646, 0x00632, 0x0fc8b },
- { 0x00646, 0x00645, 0x0fc4e },
- { 0x00646, 0x00646, 0x0fc8d },
- { 0x00646, 0x00647, 0x0fcd6 },
- { 0x00646, 0x00649, 0x0fc4f },
- { 0x00646, 0x0064a, 0x0fc50 },
- { 0x00647, 0x0062c, 0x0fc51 },
- { 0x00647, 0x00645, 0x0fc52 },
- { 0x00647, 0x00649, 0x0fc53 },
- { 0x00647, 0x0064a, 0x0fc54 },
- { 0x00647, 0x00670, 0x0fcd9 },
  { 0x00648, 0x00654, 0x00624 },
  { 0x00648, 0x00674, 0x00676 },
- { 0x00649, 0x00670, 0x0fc5d },
- { 0x0064a, 0x0062c, 0x0fc55 },
- { 0x0064a, 0x0062d, 0x0fc56 },
- { 0x0064a, 0x0062e, 0x0fc57 },
- { 0x0064a, 0x00631, 0x0fc91 },
- { 0x0064a, 0x00632, 0x0fc92 },
- { 0x0064a, 0x00645, 0x0fc58 },
- { 0x0064a, 0x00646, 0x0fc94 },
- { 0x0064a, 0x00647, 0x0fcde },
- { 0x0064a, 0x00649, 0x0fc59 },
- { 0x0064a, 0x0064a, 0x0fc5a },
  { 0x0064a, 0x00654, 0x00626 },
  { 0x0064a, 0x00674, 0x00678 },
  { 0x006c1, 0x00654, 0x006c2 },
